<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.auth.signIn.view.SignInFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:hint="@string/enter_your_email"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvUsername">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/enter_your_pass"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp"/>

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/textview32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/not_registered_yet_text"
            android:textSize="16sp"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUpText"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn" />

        <TextView
            android:id="@+id/btnSignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_up_text"
            android:textColor="@color/component_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textview32"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textview32" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in_text"
            android:fontFamily="@font/inter_regular"
            android:backgroundTint="@color/component_color"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/textview32"
            app:layout_constraintEnd_toEndOf="@+id/cvEmail"
            app:layout_constraintStart_toStartOf="@+id/cvEmail"
            app:layout_constraintTop_toBottomOf="@+id/cvEmail" />

        <TextView
            android:id="@+id/btnForgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/forgot_password_text"
            android:textSize="16sp"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
            app:layout_constraintEnd_toEndOf="@+id/cvEmail"
            app:layout_constraintTop_toBottomOf="@+id/cvEmail" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbSignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>